@@ -72,7 +72,7 @@ body {
                 <div class="nav-collapse">
                     <ul class="nav">
                         <li><a href="/">Home</a></li>
-                        <li><a href="/browse-page/1">Browse</a></li>
+                        <li><a href="/browse/page/1">Browse</a></li>
                     </ul>
                 </div>
             </div>
