@@ -6,6 +6,7 @@ Cuckoo Sandbox 0.7 (TBD)
 * Fixed virtual machine clock, now is updated to current time or specified by user via --clock option
 * Removed pickle reporting module
 * Added option to set sniffing interface for each virtual machine
+* Added pagination to API and web interface
 
 Cuckoo Sandbox 0.6 (2013-04-15)
 ===============================
